--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "daniel-binoy",
+  
   "version": "0.9.0",
   "private": false,
-  "homepage": "https://binoy.co",
+  "homepage": "https://manavvp08.github.io/ManavPurswaniPortfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -29,7 +30,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "predeploy": "npm --openssl-legacy-provider run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages --openssl-legacy-provider -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,6 +51,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
